# ipc_poc

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
commons/: Cargo.toml
commons/src/: lib.rs  models.rs  models_grpc.rs
protos/: Cargo.toml
protos/src/: main.rs
protos/src/protos/: models.proto
server/: Cargo.toml
server/src/: main.rs  user_retriever.rs  users.rs
