[package]
name = "ipc_client"
version = "0.1.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]

[dependencies]
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"
commons = { path = "../commons" }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf/" }
byteorder = "1.2.7"
grpc = "0.6.1"
futures         = "0.1.8"
futures-cpupool = "0.1.8"
