[package]
name = "commons"
version = "0.1.0"
authors = []

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf/" }
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf/" }
protobuf-codegen = { git = "https://github.com/stepancheg/rust-protobuf/" }
