[package]
name = "poc_protos"
version = "0.1.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]

[dependencies]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf/" }
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf/" }
protobuf-codegen = { git = "https://github.com/stepancheg/rust-protobuf/" }
