[package]
name = "ipc_poc"
version = "0.1.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]

[dependencies]
libc = "0.2.2"
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"
ipc-channel = { git = "https://github.com/goral09/ipc-channel", branch = "socket_name_input" }
protobuf = { git = "https://github.com/stepancheg/rust-protobuf/" }
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf/" }
protobuf-codegen = { git = "https://github.com/stepancheg/rust-protobuf/" }
