[package]
name = "ipc_poc"
version = "0.1.0"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]

[dependencies]
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf/" }
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf/" }
protobuf-codegen = { git = "https://github.com/stepancheg/rust-protobuf/" }
commons = { path = "../commons" }
